@@ -6,20 +6,38 @@
  * Copyright (c) 1998-1999 by Scriptics Corporation.
  * All rights reserved.
  *
- * RCS: @(#) $Id: tclPlatDecls.h,v 1.6 2000/08/20 03:51:23 davidg Exp $
+ * RCS: @(#) $Id: tclPlatDecls.h,v 1.7 2001/07/19 06:40:09 mdejong Exp $
  */
 
 #ifndef _TCLPLATDECLS
 #define _TCLPLATDECLS
 
 /*
- *  Pull in the definition of TCHAR.  Hopefully the compile flags
- *  of the core are matching against your project build for these
- *  public functions.  BE AWARE.
+ *  Define TCHAR by pulling in <windows.h>. Hopefully the compile flags
+ *  of the Tcl core will match those of your project so that TCHAR
+ *  will be defined the same way. BE AWARE.
  */
-#if defined(__WIN32__) && !defined(_INC_TCHAR)
-#include <tchar.h>
-#endif
+
+#ifdef __WIN32__
+
+#ifdef CHECK_UNICODE_CALLS
+
+#define _UNICODE
+#define UNICODE
+
+#define __TCHAR_DEFINED
+typedef float *_TCHAR;
+
+#define _TCHAR_DEFINED
+typedef float *TCHAR;
+
+#endif /* CHECK_UNICODE_CALLS */
+
+# define WIN32_LEAN_AND_MEAN
+# include <windows.h>
+# undef WIN32_LEAN_AND_MEAN
+
+#endif /* __WIN32__ */
 
 /* !BEGIN!: Do not edit below this line. */
 
