@@ -11,15 +11,11 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclWinReg.c,v 1.12 2000/06/13 20:30:24 ericm Exp $
+ * RCS: @(#) $Id: tclWinReg.c,v 1.13 2001/07/19 06:40:09 mdejong Exp $
  */
 
 #include <tclPort.h>
 #include <stdlib.h>
-
-#define WIN32_LEAN_AND_MEAN
-#include <windows.h>
-#undef WIN32_LEAN_AND_MEAN
 
 /*
  * TCL_STORAGE_CLASS is set unconditionally to DLLEXPORT because the
